--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,30 @@
 Package: ralget
-Title: What the Package Does (One Line, Title Case)
+Type: Package
+Title: Algebraic graphs in R.
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Author: Ian Moran
+Maintainer: Ian Moran <ian.moran11@gmail.com>
+Description: Algebraic graphs in R.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/ianmoran11/ralget
+BugReports: https://github.com/ianmoran11/ralget/issues
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+VignetteBuilder: knitr
+Imports: 
+    dplyr,
+    tidyr,
+    purrr,
+    tidygraph,
+    magrittr,
+    tibble,
+    stringr,
+    rlang,
+    forcats,
+Suggests: 
+    testthat (>= 2.1.0),
+    knitr,
+    rmarkdown,
+    tidyverse
