--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("*",ralget)
 S3method("+",ralget)
 S3method("==",ralget)
+S3method(plot,ralget)
 export("%x%")
 export(cartesian_product)
 export(e)
