--- a/_libs/ralget/NAMESPACE
+++ b/_libs/ralget/NAMESPACE
@@ -7,5 +7,8 @@ S3method(plot,ralget)
 export("%x%")
 export(cartesian_product)
 export(e)
+export(evaluate)
 export(get_edge_names)
+export(ralget_sim)
+export(sumv)
 export(v)
