--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,20 @@ S3method("+",ralget)
 S3method("==",ralget)
 S3method(plot,ralget)
 export("%x%")
+export(b)
 export(cartesian_product)
+export(dag_plot)
+export(do_causal)
 export(e)
 export(evaluate)
 export(evaluate_execute)
 export(evaluate_prepare)
+export(extract_data)
 export(get_edge_names)
+export(increment_t)
+export(plot_joint_distributions)
 export(ralget_sim)
+export(rsum)
+export(simulate)
 export(sumv)
 export(v)
