fixing evaluation problem with rsum, changing .func to .f and introducing seed argument to simulate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,14 @@
 S3method("*",ralget)
 S3method("+",ralget)
 S3method("==",ralget)
+S3method(do,ralget)
 S3method(plot,ralget)
 export("%x%")
 export(b)
 export(cartesian_product)
+export(d)
 export(dag_plot)
-export(do_causal)
+export(do)
 export(e)
 export(evaluate)
 export(evaluate_execute)
@@ -21,4 +23,5 @@ export(ralget_sim)
 export(rsum)
 export(simulate)
 export(sumv)
+export(unsafe_rsum)
 export(v)
