--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,5 +28,6 @@ Suggests:
     testthat (>= 3.0.0),
     knitr,
     rmarkdown,
-    tidyverse
+    tidyverse,
+    covr
 Config/testthat/edition: 3
