--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,16 @@ S3method("*",ralget)
 S3method("+",ralget)
 S3method("+",ralget_edge)
 S3method("==",ralget)
+S3method(print,ralget)
 export("%x%")
 export(cartesian_product)
+export(diagram)
 export(e)
 export(evaluate)
 export(evaluate_execute)
 export(evaluate_prepare)
 export(get_edge_names)
+export(ralget_graph_join)
 export(sumv)
 export(v)
+importFrom(magrittr,"%>%")
