--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ S3method("+",ralget_edge)
 S3method("==",ralget)
 S3method(print,ralget)
 export("%x%")
+export(aggregator)
 export(cartesian_product)
+export(compact)
 export(diagram)
 export(e)
 export(evaluate)
