scratchpad working - about to add ralplan .R files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,12 @@ S3method("*",ralget)
 S3method("+",ralget)
 S3method("+",ralget_edge)
 S3method("==",ralget)
-S3method(print,ralget)
 export("%x%")
 export(aggregator)
+export(b)
 export(cartesian_product)
 export(compact)
+export(d)
 export(diagram)
 export(e)
 export(evaluate)
@@ -18,4 +19,3 @@ export(get_edge_names)
 export(ralget_graph_join)
 export(sumv)
 export(v)
-importFrom(magrittr,"%>%")
